Fixed nav blur for better contrast

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,9 +30,9 @@ nav {
   background-color: #18181894;
   border: 1px solid #2c2c2c90;
   box-shadow: 0 0 25px 0 #000000a4;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(10px);
   // legacy webkit browser blur
-  -webkit-backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(10px);
   transition: all 0.5s;
 }
 
